<resources>
    <string name="app_name">RePlay</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="son">Songs Fragment</string>
    <string name="alb">Albums Fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--viewpager tabs-->
    <string name="library_tab">Library</string>
    <string name="songs_tab">Songs</string>

    <!--Side Menu labels-->
    <string name="web">www.replay.com</string>
    <string name="library">Library</string>
    <string name="lists">Lists</string>
    <string name="options">Settings</string>
    <string name="support">Support</string>
    <string name="contact">Contact</string>
    <string name="help">Help</string>



</resources>
