<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_library"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/library"
            android:checked="true"
            />
        <item
            android:id="@+id/navigation_playlists"
            android:icon="@android:drawable/ic_media_ff"
            android:title="@string/songs_tab"
            />
        <item
            android:id="@+id/navigation_options"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/options"
            />
    </group>

    <item android:title="@string/support">
        <menu>
            <item
                android:id="@+id/navigation_contact"
                android:icon="@android:drawable/sym_action_email"
                android:title="@string/contact"/>

            <item
                android:id="@+id/navigation_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/help"/>
        </menu>
    </item>






</menu>